--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,1 +1,11 @@
 rootProject.name = 'identity_verification_flutter'
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+           ....
+        }
+    }
+}
