--- a/android/build.gradle
+++ b/android/build.gradle
@@ -104,8 +104,7 @@ dependencies {
     testImplementation "io.mockk:mockk:1.12.5"
 
 
-    //Comment out first when building from flutter
-//    implementation files("$flutterRoot/bin/cache/artifacts/engine/android-x64/flutter.jar")
+   implementation files("$flutterRoot/bin/cache/artifacts/engine/android-x64/flutter.jar")
 
 
 }
