--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,8 +4,20 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://maven.microblink.com' }
+        maven { url 'https://raw.githubusercontent.com/iProov/android/master/maven/'}
         maven {
-           ....
+            url = uri("https://maven.pkg.github.com/IdentityVerification/identity-verification-android")
+            credentials {
+                Properties properties = new Properties()
+                if (project.rootProject.file('local.properties').exists()) {
+                    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+                }
+                // make sure to set these properties in your local.properties file,
+                // the username is your github username and the token is the access token you generated
+                username = properties.get("github.packages.username") ?: System.getenv("GITHUB_USERNAME")
+                password = properties.get("github.packages.token") ?: System.getenv("GITHUB_TOKEN")
+            }
         }
     }
 }
