--- a/android/build.gradle
+++ b/android/build.gradle
@@ -89,22 +89,29 @@ dependencies {
 
     
 
+// identity-verification-lib-core, identity-verification-lib-blinkid, identity-verification-lib-facetec and facetec-sdk-9.4.5 downloaded in previous step:
+    implementation files('../libs/identity-verification-lib-core.aar') // the `../libs/` part should be a relative path to the `libs` folder in your Android Studio project
+    implementation files('../libs/identity-verification-lib-facetec.aar') // make sure identity-verification-lib-facetec is above facetec-sdk-9.4.5 in the dependency list
+    implementation files('../libs/facetec-sdk-9.4.5.aar')
+    implementation files('../libs/identity-verification-lib-blinkid.aar')
 
-
-    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.9'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:1.12.5"
 
-
-   implementation files("$flutterRoot/bin/cache/artifacts/engine/android-x64/flutter.jar")
-
+implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.5.30'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.12'
+    api('com.microblink:blinkid:5.15.2@aar') {
+    	transitive = true
+	}
 
 }
