--- a/android/build.gradle
+++ b/android/build.gradle
@@ -87,12 +87,10 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation "com.microblink.identityverification:identity-verification-lib-blinkid:$idvVersion"
-    implementation "com.microblink.identityverification:identity-verification-lib-core:$idvVersion"
-    implementation "com.microblink.identityverification:identity-verification-lib-document-verification:$idvVersion"
-    implementation "com.microblink.identityverification:identity-verification-lib-facetec:$idvVersion"
-    implementation "com.microblink.identityverification:identity-verification-lib-iproov:$idvVersion"
-    implementation("com.microblink:blinkid:5.20.0")
+    
+    //implementation "com.microblink.identityverification:identity-verification-lib-document-verification:$idvVersion"
+    //implementation "com.microblink.identityverification:identity-verification-lib-iproov:$idvVersion"
+    implementation("com.microblink:blinkid:6.1.1")
 
 
 
@@ -107,5 +105,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.9'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:1.12.5"
-
+    implementation files("$flutterRoot/bin/cache/artifacts/engine/android-x64/flutter.jar")
 }
